softether/azure/ubuntu/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "vmName": {
        "type": "string",
        "defaultValue": "[uniqueString(resourceGroup().id)]",
        "metadata": {
          "description": "The name of you Virtual Machine. Defaults to a hash."
        }
      },
      "adminUsername": {
        "type": "string",
        "metadata": {
          "description": "Username for the Virtual Machine."
        }
      },
      "authenticationType": {
        "type": "string",
        "defaultValue": "password",
        "allowedValues": [
          "sshPublicKey",
          "password"
        ],
        "metadata": {
          "description": "Type of authentication to use on the Virtual Machine. SSH key is recommended."
        }
      },
      "adminPasswordOrKey": {
        "type": "securestring",
        "metadata": {
          "description": "SSH Key or password for the Virtual Machine. SSH key is recommended."
        }
      },
      "dnsLabelPrefix": {
        "type": "string",
        "defaultValue": "[toLower(concat('vm-', uniqueString(resourceGroup().id)))]",
        "metadata": {
          "description": "Unique DNS Name for the Public IP used to access the Virtual Machine."
        }
      },
      "ubuntuOSVersion": {
        "type": "string",
        "defaultValue": "18.04-LTS",
        "allowedValues": [
          "18.04-LTS"
        ],
        "metadata": {
          "description": "The Ubuntu version for the VM. This will pick a fully patched image of this given Ubuntu version."
        }
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      },
      "VmSize": {
        "type": "string",
        "defaultValue": "Standard_B1ls",
        "metadata": {
          "description": "The size of the VM"
        }
      },
      "virtualNetworkName": {
        "type": "string",
        "defaultValue": "vnet",
        "metadata": {
          "description": "Name of the VNET"
        }
      },
      "subnetName": {
        "type": "string",
        "defaultValue": "subnet",
        "metadata": {
          "description": "Name of the subnet in the virtual network"
        }
      },
      "networkSecurityGroupName": {
        "type": "string",
        "defaultValue": "nsg",
        "metadata": {
          "description": "Name of the Network Security Group"
        }
      },
      "vpnUserName": {
        "type": "string",
        "defaultValue": "notavpnuser",
        "metadata": {
          "description": "Username for a vpn user"
        }
      },
      "vpnUserPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Password of vpn user"
        }
      },
      "vpnPskKey": {
        "type": "string",
        "defaultValue": "strongpskkey",
        "metadata": {
          "description": "Ipsec pre-shared key. Specify it with around 8 ASCII characters"
        }
      },
      "vpnServerPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Server password for managing VPN"
        }
      },
      "dnsServer": {
        "type": "string",
        "defaultValue": "1.1.1.1",
        "metadata": {
          "description": "DNS server address for VPN server to use. Default is 1.1.1."
        }
      }
  
    },
    "variables": {
      "publicIpAddressName": "[concat(parameters('vmName'), 'pip' )]",
      "networkInterfaceName": "[concat(parameters('vmName'),'nic')]",
      "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName'))]",
      "osDiskType": "StandardSSD_LRS",
      "subnetAddressPrefix": "10.1.0.0/24",
      "addressPrefix": "10.1.0.0/16",
      "linuxConfiguration": {
        "disablePasswordAuthentication": true,
        "ssh": {
          "publicKeys": [
            {
              "path": "[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]",
              "keyData": "[parameters('adminPasswordOrKey')]"
            }
          ]
        }
      },
      "scriptCommand": "[concat('sh script.sh ',parameters('vpnPskKey'),' ',parameters('vpnUserName'),' ',parameters('vpnUserPassword'),' ',parameters('vpnServerPassword'))]"
    },
    "resources": [
      {
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2018-10-01",
        "name": "[variables('networkInterfaceName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupName'))]",
          "[resourceId('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]",
          "[resourceId('Microsoft.Network/publicIpAddresses/', variables('publicIpAddressName'))]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "subnet": {
                  "id": "[variables('subnetRef')]"
                },
                "privateIPAllocationMethod": "Dynamic",
                "publicIpAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                }
              }
            }
          ],
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('networkSecurityGroupName'))]"
          }
        }
      },
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2019-02-01",
        "name": "[parameters('networkSecurityGroupName')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "SSH",
              "properties": {
                "priority": 1000,
                "protocol": "TCP",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "22"
              }
            },
            {
              "name": "L2TP-Ipsec",
              "properties": {
                "priority": 1100,
                "protocol": "UDP",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRanges": [ "500", "4500", "1194", "1701" ]
              }
            },
            {
              "name": "SoftEther_Mgmt_Ports",
              "properties": {
                "priority": 1200,
                "protocol": "TCP",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRanges": [ "443", "992", "1194", "555" ]
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/virtualNetworks",
        "apiVersion": "2019-04-01",
        "name": "[parameters('virtualNetworkName')]",
        "location": "[parameters('location')]",
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[variables('addressPrefix')]"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "[parameters('dnsServer')]"
            ]
          },
          "subnets": [
            {
              "name": "[parameters('subnetName')]",
              "properties": {
                "addressPrefix": "[variables('subnetAddressPrefix')]",
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/publicIpAddresses",
        "apiVersion": "2019-02-01",
        "name": "[variables('publicIpAddressName')]",
        "location": "[parameters('location')]",
        "properties": {
          "publicIpAllocationMethod": "Static",
          "publicIPAddressVersion": "IPv4",
          "dnsSettings": {
            "domainNameLabel": "[parameters('dnsLabelPrefix')]"
          },
          "idleTimeoutInMinutes": 4
        },
        "sku": {
          "name": "Standard",
          "tier": "Regional"
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2019-03-01",
        "name": "[parameters('vmName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName'))]"
        ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "[parameters('VmSize')]"
          },
          "storageProfile": {
            "osDisk": {
              "createOption": "fromImage",
              "managedDisk": {
                "storageAccountType": "[variables('osDiskType')]"
              }
            },
            "imageReference": {
              "publisher": "Canonical",
              "offer": "UbuntuServer",
              "sku": "[parameters('ubuntuOSVersion')]",
              "version": "latest"
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
              }
            ]
          },
          "osProfile": {
            "computerName": "[parameters('vmName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPasswordOrKey')]",
            "linuxConfiguration": "[if(equals(parameters('authenticationType'), 'password'), json('null'), variables('linuxConfiguration'))]"
          }
        }
      },
      {
        "name": "[concat(parameters('vmName'),'/installcustomscript')]",
        "type": "Microsoft.Compute/virtualMachines/extensions",
        "location": "[resourceGroup().location]",
        "apiVersion": "2019-03-01",
        "dependsOn": [
          "[concat('Microsoft.Compute/virtualMachines/', parameters('vmName'))]"
        ],
        "tags": {
          "displayName": "config-app"
        },
        "properties": {
          "publisher": "Microsoft.Azure.Extensions",
          "type": "CustomScript",
          "typeHandlerVersion": "2.1",
          "autoUpgradeMinorVersion": true,
          "protectedSettings": {
            "commandToExecute": "[variables('scriptCommand')]",
            "fileUris": [ "https://raw.githubusercontent.com/spar/vpnoncloud/master/softether/azure/debian/script.sh" ]
          }
        }
      }
    ],
    "outputs": {
      "adminUsername": {
        "type": "string",
        "value": "[parameters('adminUsername')]"
      },
      "hostname": {
        "type": "string",
        "value": "[reference(variables('publicIPAddressName')).dnsSettings.fqdn]"
      },
      "sshCommand": {
        "type": "string",
        "value": "[concat('ssh ', parameters('adminUsername'), '@', reference(variables('publicIPAddressName')).dnsSettings.fqdn)]"
      }
    }
  }
